[metadata]
name = pydsa
version = 0.0.1
author = DEAXParadox
description = Data Structure Package
classifiers = 
    Programming Language :: Python :: 3 only
    Programming Language :: Python :: >= 3.7

[options]
python_requires = >=3.1
packages = find:
install_requires = rich>=13.3.5
include_package_data = true

[options.entry_points]
console_scripts = 
    pydsahello = pydsa:hello
    pydsahello2 = pydsa:hello2
    price = pydsa.iterator.prime:main

[options.packages.find]
where = .
include = pydsa*
exclude = 
    venv*
    test*
    files*
    run.py*
    .gitignore*
    src*